infrastructure/modules/eks/notification-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification
  template:
    metadata:
      labels:
        app: notification
    spec:
      containers:
        - name: notification
          image: <ACCOUNT_ID>.dkr.ecr.us-east-2.amazonaws.com/notification-service:latest
          ports:
            - containerPort: 3005
---
apiVersion: v1
kind: Service
metadata:
  name: notification
spec:
  type: ClusterIP
  selector:
    app: notification
  ports:
    - port: 80
      targetPort: 3005
