infrastructure/modules/eks/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: <ACCOUNT_ID>.dkr.ecr.us-east-2.amazonaws.com/payment-service:latest
          ports:
            - containerPort: 3004
---
apiVersion: v1
kind: Service
metadata:
  name: payment
spec:
  type: ClusterIP
  selector:
    app: payment
  ports:
    - port: 80
      targetPort: 3004
